Fix: Adicionando limite minimo e suas validações